--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link  rel="stylesheet" type="text/css" href="./header.component.css" />
     <title>curiousfan</title>
 </head>
@@ -15,11 +14,11 @@
   <div id="ss" class="col-md-6">
   <nav>
   <ul>
-  <li><a href="../contact/contact.component.html">Contact</a></li>
+  <li><a href="contact" >Contact</a></li>
   
-  <li><a href="#">A propos</a></li>
- <li><a href="#">League</a></li>
-  <li><a href="../app.component.html">Acceuil</a></li>
+  <li><a href="A propos">A propos</a></li>
+ <li><a href="league">League</a></li>
+  <li><a href="" >Acceuil</a></li>
   </ul>
   </nav>
   </div>
