--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <link  rel="stylesheet" type="text/css" href="./section.component.css" />
-    
-    </head>
+
     <body>
-        <div class="container-fluid">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn " type="submit">Search</button>
-              </form>
-
-
-      
-      
-      
-        </div>
-    </body>
-</html>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/><br/>
+    <br/>
+    <br/>
+    <br/>
+<h1>welcome</h1>
+</body>
